--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,580 +1,1 @@
-@charset "UTF-8";
-* {
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  font-family: 'ヒラギノ角ゴ ProN', 'Mukta', sans-serif;
-}
-
-a {
-  text-decoration: none;
-}
-
-a:visited {
-  color: #fff;
-}
-
-hr {
-  width: 100%;
-  border-style: solid;
-  border-top: 1px;
-  background-color: #000;
-}
-
-h1 {
-  font-size: 30px;
-  color: #000;
-  font-family: sans-serif;
-}
-
-li {
-  list-style: none;
-}
-
-.floating_menu {
-  height: 100vh;
-  width: 100%;
-  position: fixed;
-  background-color: #000;
-  color: #fff;
-  z-index: 4;
-  opacity: 0;
-  visibility: hidden;
-  -webkit-transition: 1s;
-  transition: 1s;
-}
-
-.floating_menu a:hover {
-  color: #606060;
-}
-
-.floating_menu .main_menu {
-  height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.menu_active {
-  -webkit-transition: 1s;
-  transition: 1s;
-  opacity: 1;
-  visibility: visible;
-}
-
-.main_list {
-  font-size: 32px;
-  font-weight: 600;
-  margin-top: 20px;
-  line-height: 0.8;
-  text-align: center;
-}
-
-.sub_list {
-  font-size: 20px;
-  text-align: center;
-}
-
-.content_title {
-  font-size: 30px;
-}
-
-.frame {
-  max-width: 1000px;
-  margin: auto;
-}
-
-.nav_button {
-  width: 50px;
-  height: 20px;
-  margin-top: 16px;
-  margin-left: 15px;
-  position: fixed;
-  z-index: 4;
-  cursor: pointer;
-}
-
-.line1 {
-  width: 50px;
-  height: 1px;
-  display: block;
-  background-color: #474747;
-  margin-bottom: 5px;
-  position: absolute;
-  top: 0;
-  -webkit-transition: ease .4s;
-  transition: ease .4s;
-}
-
-.line1_active {
-  width: 35px;
-  -webkit-transform: rotate(45deg);
-          transform: rotate(45deg);
-  top: 9px;
-  background-color: #fff;
-}
-
-.line2 {
-  width: 30px;
-  height: 1px;
-  display: block;
-  background-color: #474747;
-  margin-bottom: 5px;
-  position: absolute;
-  top: 5px;
-}
-
-.line2_active {
-  width: 0px;
-}
-
-.line3 {
-  width: 20px;
-  height: 1px;
-  display: block;
-  background-color: #FC751A;
-  position: absolute;
-  top: 10px;
-  -webkit-transition: ease .4s;
-  transition: ease .4s;
-}
-
-.line3_active {
-  width: 35px;
-  -webkit-transform: rotate(-45deg);
-          transform: rotate(-45deg);
-  top: 10px;
-  background-color: #fff;
-}
-
-.nav-item {
-  font-size: 15px;
-}
-
-.section_top {
-  min-height: 100vh;
-  position: relative;
-  overflow: hidden;
-}
-
-.section_content {
-  padding: 35px 10px 90px 0px;
-}
-
-.top_content {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translateY(-50%) translateX(-50%);
-  -webkit-transform: translateY(-50%) translateX(-50%);
-  margin-bottom: 0px;
-}
-
-.top_text {
-  font-size: 40px;
-  font-weight: 7500;
-  position: relative;
-  color: #000;
-  font-family: Helvetica Neue,'Mukta', sans-serif;
-  letter-spacing: 0.13em;
-  text-align: center;
-  margin-bottom: 0px;
-}
-
-.top_text::before {
-  position: absolute;
-  top: -60px;
-  content: 'portfolio';
-  left: -315px;
-  color: #f3f3f3;
-  font-size: 140px;
-  -webkit-transform: translateX(0%);
-          transform: translateX(0%);
-  text-transform: uppercase;
-  z-index: -1;
-  font-family: Helvetica Neue,'Mukta', sans-serif;
-  letter-spacing: 0.09em;
-  overflow: hidden;
-}
-
-.top_text_name {
-  font-size: 12px;
-  font-weight: 700;
-  font-family: Helvetica Neue, 'Mukta', sans-serif;
-  text-align: center;
-  margin-top: 0px;
-  letter-spacing: 0.13em;
-}
-
-.top_content_bottom {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.triangle {
-  width: 0;
-  height: 0px;
-  border-top: 10px solid #000;
-  border-right: 10px solid transparent;
-  border-left: 10px solid transparent;
-  position: absolute;
-  top: 62%;
-  left: 50%;
-  transform: translateY(-50%) translateX(-50%);
-  -webkit-transform: translateY(-50%) translateX(-50%);
-}
-
-.about {
-  font-size: 12px;
-}
-
-.intro {
-  margin-top: 30px;
-}
-
-.skill_top {
-  margin-top: 26px;
-}
-
-.skill_title {
-  margin-bottom: 3px;
-  font-size: 14px;
-  font-weight: 400;
-}
-
-.skill_item {
-  margin-bottom: 16px;
-}
-
-.skill_list_item {
-  padding-left: 3px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.skill_list {
-  font-size: 12px;
-  list-style: none;
-  margin-right: 8px;
-}
-
-.study_title {
-  font-weight: 100;
-  font-size: 14px;
-  margin-top: 20px;
-  margin-bottom: 4px;
-}
-
-.study_item {
-  margin-bottom: 10px;
-  padding-left: 3px;
-  font-size: 12px;
-  color: #000;
-}
-
-.study_subject {
-  width: 100px;
-  font-size: 10px;
-}
-
-.study_item {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.career_item {
-  margin-top: 20px;
-}
-
-.career_title {
-  margin-bottom: 5px;
-}
-
-.career_content {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.career_content_in p {
-  width: 360px;
-  margin-bottom: 1px;
-  margin-right: 20px;
-}
-
-.work {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin-top: 70px;
-}
-
-.work_content1 {
-  width: 300px;
-  margin-right: 30px;
-  position: relative;
-}
-
-.work_content1 h3 {
-  position: absolute;
-  bottom: 0;
-  padding: 2px 4px 2px 4px;
-  font-size: 12px;
-  background-color: #000;
-  color: #fff;
-}
-
-.work_content1 .content1 {
-  width: 300px;
-  margin-right: 40px;
-  border-style: solid;
-  border-width: 1px;
-  border-color: #000;
-}
-
-.work_content1 .content1 img {
-  width: 100%;
-}
-
-.work_content2 {
-  width: 300px;
-  margin-right: 30px;
-  position: relative;
-}
-
-.work_content2 h3 {
-  position: absolute;
-  bottom: 0;
-  padding: 2px 4px 2px 4px;
-  font-size: 12px;
-  background-color: #000;
-  color: #fff;
-}
-
-.work_content2 .content2 {
-  width: 300px;
-  margin-right: 40px;
-  border-style: solid;
-  border-width: 1px;
-  border-color: #000;
-}
-
-.work_content2 .content2 img {
-  width: 300px;
-}
-
-.work_underline {
-  width: 100%;
-  height: 0.5px;
-  background-color: #000;
-  margin-top: 30px;
-  margin-bottom: 40px;
-}
-
-.work button {
-  width: 80px;
-  height: 30px;
-  margin-top: 18px;
-  margin-bottom: 20px;
-  border-style: solid;
-  border-width: 1px;
-  border-color: #c6c6c6;
-  background-color: #e6e6e6;
-  font-size: 13px;
-  font-weight: 100;
-}
-
-#contact {
-  width: 100%;
-  font-weight: 700;
-  margin-top: 40px;
-}
-
-#contact label {
-  font-size: 13px;
-  color: #4D4D4D;
-}
-
-.contact_item1 {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.contact_item2 {
-  margin-top: 14px;
-}
-
-.contact_item1_name {
-  width: 50%;
-  margin-right: 15px;
-}
-
-.contact_item1_mail {
-  width: 50%;
-  margin-left: 15px;
-}
-
-#contact_name {
-  width: 100%;
-  height: 28px;
-  background-color: #F9F9F9;
-  border-color: #E0E0E0;
-  border-style: solid;
-  border-width: 1px;
-  padding-left: 6px;
-}
-
-#contact_mail {
-  width: 100%;
-  height: 28px;
-  background-color: #F9F9F9;
-  border-color: #E0E0E0;
-  border-style: solid;
-  border-width: 1px;
-  padding-left: 6px;
-}
-
-#contact_message {
-  width: 100%;
-  height: 70px;
-  background-color: #F9F9F9;
-  border-color: #E0E0E0;
-  border-style: solid;
-  border-width: 1px;
-  padding-top: 8px;
-  padding-left: 6px;
-}
-
-#err_textarea {
-  margin-top: 8px;
-}
-
-.err_text {
-  margin-top: 2px;
-  font-size: 12px;
-  color: #F94B4B;
-}
-
-.confirm_btn {
-  color: #FFF;
-  background-color: #404549;
-  cursor: pointer;
-  border-style: none;
-  padding: 10px 18px 10px 18px;
-  margin-top: 12px;
-  font-size: 13px;
-  font-weight: 500;
-}
-
-#modal_section {
-  position: fixed;
-  top: 0;
-  height: 100%;
-  width: 100%;
-  background-color: rgba(0, 0, 0, 0.6);
-  z-index: 100;
-  display: none;
-}
-
-#modal_section .modal_form {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  padding: 20px 20px 30px 20px;
-  z-index: 10000;
-  background-color: #FFF;
-}
-
-#modal_section .modal_form .modal_title {
-  font-size: 16px;
-}
-
-#modal_section .modal_form .modal_item {
-  font-size: 14px;
-  margin-top: 10px;
-}
-
-#modal_section .modal_form .modal_item_subject {
-  font-weight: 900;
-}
-
-#modal_section .modal_form .close_button {
-  position: absolute;
-  top: 0;
-  right: 0;
-  cursor: pointer;
-}
-
-#modal_section .modal_form .close_button::after {
-  content: 'x';
-  height: 10px;
-  width: 10px;
-}
-
-#modal_section .modal_form .modal_button {
-  margin-top: 16px;
-  font-size: 13px;
-  color: #fff;
-  padding: 6px 8px 6px 8px;
-  border: none;
-  border-style: solid 1px;
-  background-color: #5A5D5E;
-  cursor: pointer;
-}
-
-#modal_section .modal_form input {
-  display: none;
-}
-
-#contact_success {
-  background-color: #404549;
-  width: 100%;
-  margin-top: 8px;
-  padding: 16px 0 16px 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-#contact_success #success_box {
-  padding-left: 20px;
-}
-
-#contact_success .main_message {
-  font-size: 24px;
-  font-weight: 100;
-  margin-bottom: 8px;
-  color: #f3f3f3;
-}
-
-#contact_success .sub_message {
-  font-size: 10px;
-  margin-top: 2px;
-  font-weight: 100;
-  color: #f3f3f3;
-}
-/*# sourceMappingURL=custom.css.map */
+@charset "UTF-8";*{margin:0;padding:0}body{font-family:ヒラギノ角ゴ ProN,Mukta,sans-serif}a{text-decoration:none}a:visited{color:#fff}hr{background-color:#000;border-style:solid;border-top:1px;width:100%}h1{color:#000;font-family:sans-serif;font-size:30px}li{list-style:none}.floating_menu{background-color:#000;color:#fff;height:100vh;opacity:0;position:fixed;transition:1s;visibility:hidden;width:100%;z-index:4}.floating_menu a:hover{color:#606060}.floating_menu .main_menu{align-items:center;display:flex;height:100%;justify-content:center}.menu_active{opacity:1;transition:1s;visibility:visible}.main_list{font-size:32px;font-weight:600;line-height:.8;margin-top:20px;text-align:center}.sub_list{font-size:20px;text-align:center}.content_title{font-size:30px}.frame{margin:auto;max-width:1000px}.nav_button{cursor:pointer;height:20px;margin-left:15px;margin-top:16px;position:fixed;width:50px;z-index:4}.line1{background-color:#474747;display:block;height:1px;margin-bottom:5px;position:absolute;top:0;transition:.4s ease;width:50px}.line1_active{background-color:#fff;top:9px;transform:rotate(45deg);width:35px}.line2{background-color:#474747;display:block;height:1px;margin-bottom:5px;position:absolute;top:5px;width:30px}.line2_active{width:0}.line3{background-color:#fc751a;display:block;height:1px;position:absolute;top:10px;transition:.4s ease;width:20px}.line3_active{background-color:#fff;top:10px;transform:rotate(-45deg);width:35px}.nav-item{font-size:15px}.section_top{min-height:100vh;overflow:hidden;position:relative}.section_content{padding:35px 10px 90px 0}.top_content{left:50%;margin-bottom:0;position:absolute;top:50%;transform:translateY(-50%) translateX(-50%);-webkit-transform:translateY(-50%) translateX(-50%)}.top_text{color:#000;font-size:40px;font-weight:7500;letter-spacing:.13em;margin-bottom:0;position:relative;text-align:center}.top_text,.top_text:before{font-family:Helvetica Neue,Mukta,sans-serif}.top_text:before{color:#f3f3f3;content:"portfolio";font-size:140px;left:-315px;letter-spacing:.09em;overflow:hidden;position:absolute;text-transform:uppercase;top:-60px;transform:translateX(0);z-index:-1}.top_text_name{font-family:Helvetica Neue,Mukta,sans-serif;font-size:12px;font-weight:700;letter-spacing:.13em;margin-top:0;text-align:center}.top_content_bottom{align-items:center;display:flex;justify-content:center}.triangle{border-left:10px solid transparent;border-right:10px solid transparent;border-top:10px solid #000;height:0;left:50%;position:absolute;top:62%;transform:translateY(-50%) translateX(-50%);-webkit-transform:translateY(-50%) translateX(-50%);width:0}.about{font-size:12px}.intro{margin-top:30px}.skill_top{margin-top:26px}.skill_title{font-size:14px;font-weight:400;margin-bottom:3px}.skill_item{margin-bottom:16px}.skill_list_item{display:flex;padding-left:3px}.skill_list{font-size:12px;list-style:none;margin-right:8px}.study_title{font-size:14px;font-weight:100;margin-bottom:4px;margin-top:20px}.study_item{color:#000;font-size:12px;margin-bottom:10px;padding-left:3px}.study_subject{font-size:10px;width:100px}.study_item{display:flex}.career_item{margin-top:20px}.career_title{margin-bottom:5px}.career_content{display:flex}.career_content_in p{margin-bottom:1px;margin-right:20px;width:360px}.work{display:flex;margin-top:70px}.work_content1{margin-right:30px;position:relative;width:300px}.work_content1 h3{background-color:#000;bottom:0;color:#fff;font-size:12px;padding:2px 4px;position:absolute}.work_content1 .content1{border:1px solid #000;margin-right:40px;width:300px}.work_content1 .content1 img{width:100%}.work_content2{margin-right:30px;position:relative;width:300px}.work_content2 h3{background-color:#000;bottom:0;color:#fff;font-size:12px;padding:2px 4px;position:absolute}.work_content2 .content2{border:1px solid #000;margin-right:40px;width:300px}.work_content2 .content2 img{width:300px}.work_underline{background-color:#000;height:.5px;margin-bottom:40px;margin-top:30px;width:100%}.work button{background-color:#e6e6e6;border:1px solid #c6c6c6;font-size:13px;font-weight:100;height:30px;margin-bottom:20px;margin-top:18px;width:80px}#contact{font-weight:700;margin-top:40px;width:100%}#contact label{color:#4d4d4d;font-size:13px}.contact_item1{display:flex}.contact_item2{margin-top:14px}.contact_item1_name{margin-right:15px;width:50%}.contact_item1_mail{margin-left:15px;width:50%}#contact_mail,#contact_name{height:28px}#contact_mail,#contact_message,#contact_name{background-color:#f9f9f9;border:1px solid #e0e0e0;padding-left:6px;width:100%}#contact_message{height:70px;padding-top:8px}#err_textarea{margin-top:8px}.err_text{color:#f94b4b;font-size:12px;margin-top:2px}.confirm_btn{background-color:#404549;border-style:none;color:#fff;cursor:pointer;font-size:13px;font-weight:500;margin-top:12px;padding:10px 18px}#modal_section{background-color:rgba(0,0,0,.6);display:none;height:100%;position:fixed;top:0;width:100%;z-index:100}#modal_section .modal_form{background-color:#fff;left:50%;padding:20px 20px 30px;position:absolute;top:50%;transform:translate(-50%,-50%);-webkit-transform:translate(-50%,-50%);-ms-transform:translate(-50%,-50%);z-index:10000}#modal_section .modal_form .modal_title{font-size:16px}#modal_section .modal_form .modal_item{font-size:14px;margin-top:10px}#modal_section .modal_form .modal_item_subject{font-weight:900}#modal_section .modal_form .close_button{cursor:pointer;position:absolute;right:0;top:0}#modal_section .modal_form .close_button:after{content:"x";height:10px;width:10px}#modal_section .modal_form .modal_button{background-color:#5a5d5e;border-color:currentcolor;border-style:solid none;border-width:medium 1px;color:#fff;cursor:pointer;font-size:13px;margin-top:16px;padding:6px 8px}#modal_section .modal_form input{display:none}#contact_success{align-items:center;background-color:#404549;display:flex;margin-top:8px;padding:16px 0;width:100%}#contact_success #success_box{padding-left:20px}#contact_success .main_message{color:#f3f3f3;font-size:24px;font-weight:100;margin-bottom:8px}#contact_success .sub_message{color:#f3f3f3;font-size:10px;font-weight:100;margin-top:2px}
