--- a/resources/css/custom.scss
+++ b/resources/css/custom.scss
@@ -1,256 +1,254 @@
 @charset "UTF-8";
-*{
+$pc: 1080px;
+$tab: 768px;
+$sp: 620px;
+
+@mixin pc {
+    @media screen and (min-width: ($pc)) {
+        @content;
+    }
+}
+
+@mixin tab {
+    @media screen and (min-width: ($tab)) {
+        @content;
+    }
+}
+
+@mixin sp {
+    @media screen and (min-width: ($sp)) {
+        @content;
+    }
+}
+* {
     margin: 0;
     padding: 0;
 }
-body{
-    font-family:'ヒラギノ角ゴ ProN', 'Mukta', sans-serif;
-
+body {
+    font-family: "ヒラギノ角ゴ ProN", "Mukta", sans-serif;
 }
-a{
+a {
     text-decoration: none;
 }
-a:visited{
+a:visited {
     color: #fff;
 }
-hr{
-   width:100%;
-   border-style: solid;
-   border-top: 1px;
-   background-color: #000;
+hr {
+    width: 100%;
+    border-style: solid;
+    border-top: 1px;
+    background-color: #000;
 }
-h1{
-    font-size:30px;
+h1 {
+    font-size: 30px;
     color: #000;
-    font-family:sans-serif;
+    font-family: sans-serif;
 }
-li{
-    list-style:none;
+li {
+    list-style: none;
 }
 button {
-	background: none;
-	border: none;
-	outline: none;
-	-webkit-appearance: none;
-	-moz-appearance: none;
-	appearance: none;
+    background: none;
+    border: none;
+    outline: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
 }
-.floating_menu{
+.floating_menu {
     height: 100vh;
     width: 100%;
     position: fixed;
     background-color: #000;
     color: #fff;
-    z-index:4;
+    z-index: 4;
     opacity: 0;
     visibility: hidden;
     transition: 1s;
 
-     a:hover{
+    a:hover {
         color: #606060;
-        
     }
-    
-    
 
-    .main_menu{
+    .main_menu {
         height: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
     }
-    
 }
-.menu_active{
+.menu_active {
     transition: 1s;
     opacity: 1;
-    visibility: visible;    
-
+    visibility: visible;
 }
 
-.main_list{
+.main_list {
     font-size: 32px;
     font-weight: 600;
     margin-top: 20px;
     line-height: 0.8;
     text-align: center;
 }
-.sub_list{
+.sub_list {
     font-size: 20px;
     text-align: center;
-
 }
 
-.content_title{
+.content_title {
     font-size: 30px;
 }
-.frame{
-    max-width:1000px;
+.frame {
+    max-width: 1000px;
     margin: auto;
-
 }
-.nav_button{
-    width:50px;
+.nav_button {
+    width: 50px;
     height: 20px;
     margin-top: 16px;
-    margin-left:15px;
+    margin-left: 15px;
     position: fixed;
     z-index: 4;
     cursor: pointer;
-    
 }
-.line1{
-    width:50px;
-    height:1px;
+.line1 {
+    width: 50px;
+    height: 1px;
     display: block;
     background-color: #474747;
     margin-bottom: 5px;
-    position:absolute;
-    top:0;
-    transition: ease .4s;
-
+    position: absolute;
+    top: 0;
+    transition: ease 0.4s;
 }
-.line1_active{
+.line1_active {
     width: 35px;
     transform: rotate(45deg);
-    top:9px;
+    top: 9px;
     background-color: #fff;
-
-
 }
-.line2{
-    width:30px;
-    height:1px;
+.line2 {
+    width: 30px;
+    height: 1px;
     display: block;
     background-color: #474747;
     margin-bottom: 5px;
-    position:absolute;
-    top:5px;
-
+    position: absolute;
+    top: 5px;
 }
-.line2_active{
-    width:0px;
-
-
+.line2_active {
+    width: 0px;
 }
-.line3{
-    width:20px;
-    height:1px;
+.line3 {
+    width: 20px;
+    height: 1px;
     display: block;
-    background-color: #FC751A;
-    position:absolute;
-    top:10px;
-    transition: ease .4s;
-
+    background-color: #fc751a;
+    position: absolute;
+    top: 10px;
+    transition: ease 0.4s;
 }
-.line3_active{
-    width:35px;
+.line3_active {
+    width: 35px;
     transform: rotate(-45deg);
-    top:10px;
+    top: 10px;
     background-color: #fff;
-
 }
 
-
-
-.nav-item{
+.nav-item {
     font-size: 15px;
 }
-.section_top{
-    min-height:100vh;
-    position:relative;
-    overflow:hidden;
-
+.section_top {
+    min-height: 100vh;
+    position: relative;
+    overflow: hidden;
 }
 
-.section_content{
-    padding: 25px 10px 90px 10px ;
-
+.section_content {
+    padding: 25px 10px 90px 10px;
 }
 
-.top_content{
-    position:absolute;
+.top_content {
+    position: absolute;
     top: 50%;
-  left: 50%;
-  transform: translateY(-50%) translateX(-50%);
-  -webkit-transform: translateY(-50%) translateX(-50%);
-    margin-bottom:0px;
-
+    left: 50%;
+    transform: translateY(-50%) translateX(-50%);
+    -webkit-transform: translateY(-50%) translateX(-50%);
+    margin-bottom: 0px;
 }
-.top_text{
-    font-size:40px;
-    font-weight:7500;
+.top_text {
+    font-size: 40px;
+    font-weight: 7500;
 
     position: relative;
-    color:#000;
-    font-family: Helvetica Neue,'Mukta', sans-serif;
+    color: #000;
+    font-family:
+        Helvetica Neue,
+        "Mukta",
+        sans-serif;
     letter-spacing: 0.13em;
     text-align: center;
-    margin-bottom:0px;
-    
-
+    margin-bottom: 0px;
 }
-.top_text::before{
-    
+.top_text::before {
     position: absolute;
     top: -60px;
-    content: 'portfolio';
+    content: "portfolio";
     left: -315px;
     color: #f3f3f3;
     font-size: 140px;
     transform: translateX(0%);
-     text-transform: uppercase;
+    text-transform: uppercase;
     z-index: -1;
-    font-family: Helvetica Neue,'Mukta', sans-serif;
+    font-family:
+        Helvetica Neue,
+        "Mukta",
+        sans-serif;
     letter-spacing: 0.09em;
-    overflow:hidden;
-
+    overflow: hidden;
 }
-.top_text_name{
+.top_text_name {
     font-size: 12px;
     font-weight: 700;
-    font-family:Helvetica Neue, 'Mukta', sans-serif;
+    font-family:
+        Helvetica Neue,
+        "Mukta",
+        sans-serif;
     text-align: center;
-    margin-top:0px;
+    margin-top: 0px;
     letter-spacing: 0.13em;
-
-
 }
-.top_content_bottom{
-    display:flex;
+.top_content_bottom {
+    display: flex;
     justify-content: center;
     align-items: center;
-
 }
-.triangle{
-  width:0;
-  height: 0px;
-  border-top: 10px solid #000;
-  border-right: 10px solid transparent;
-  border-left: 10px solid transparent;
+.triangle {
+    width: 0;
+    height: 0px;
+    border-top: 10px solid #000;
+    border-right: 10px solid transparent;
+    border-left: 10px solid transparent;
 
-  position:absolute;
-  top: 62%;
-  left: 50%;
-  transform: translateY(-50%) translateX(-50%);
-  -webkit-transform: translateY(-50%) translateX(-50%);
-
-
+    position: absolute;
+    top: 62%;
+    left: 50%;
+    transform: translateY(-50%) translateX(-50%);
+    -webkit-transform: translateY(-50%) translateX(-50%);
 }
-.about{
+.about {
     font-size: 12px;
 }
 
-.intro{
+.intro {
     margin-top: 30px;
 }
 
-
-.skill_top{
-    margin-top:26px;
+.skill_top {
+    margin-top: 26px;
 }
 
-.skill_title{
+.skill_title {
     margin-bottom: 3px;
     font-size: 14px;
     font-weight: 400;
@@ -260,253 +258,260 @@ button {
     margin-bottom: 16px;
 }
 
-.skill_list_item{
+.skill_list_item {
     padding-left: 3px;
     display: flex;
 }
 
-.skill_list{
+.skill_list {
     font-size: 12px;
     list-style: none;
     margin-right: 8px;
 }
 
-.study_title{
+.study_title {
     font-weight: 100;
     font-size: 14px;
-    margin-top:20px;
+    margin-top: 20px;
     margin-bottom: 4px;
-    
 }
-.study_item{
+.study_item {
     margin-bottom: 10px;
     padding-left: 3px;
     font-size: 12px;
-    color:#000;
+    color: #000;
 }
 .study_subject {
     width: 100px;
     font-size: 10px;
 }
 
-.study_item{
+.study_item {
     display: flex;
 }
-.career_item{
+.career_item {
     margin-top: 20px;
 }
-.career_title{
+.career_title {
     margin-bottom: 5px;
 }
-.career_content{
+.career_content {
     display: flex;
-
 }
-.career_content_in p{
+.career_content_in p {
     width: 360px;
     margin-bottom: 1px;
 
     margin-right: 20px;
 }
 
+.work {
+    display: block;
+    margin-top: 70px;
+    @include sp {
+        display: flex;
+        justify-content: space-between;
+    }
+}
+.work_content {
+    margin-right: 0px;
+    margin-bottom: 20px;
+    @include sp {
+        max-width: 300px;
+        max-height: 160px;
+        width: 100%;
+        height: 100%;
+        // padding-right: 30px;
+    }
+    .buttons {
+        display: flex;
+        justify-content: center;
+    }
+    .button1 {
+        // width: 100%;
+        height: 30px;
+        margin-top: 4px;
 
-.work{
-    display: flex;
-    margin-top:70px;
+        margin-bottom: 20px;
+        // border-style: solid;
+        border-width: 1px;
+        // border-color: #c6c6c6;
+        color: #000033;
+
+        font-size: 13px;
+        // font-weight: 100;
+        cursor: pointer;
+        margin-right: 8px;
+        margin-left: 2px;
+    }
+    .button1:hover {
+        color: #b0c4de;
+    }
+
+    .button2 {
+        // width: 100%;
+        height: 30px;
+        margin-top: 4px;
+
+        margin-bottom: 20px;
+        // border-style: solid;
+        // border-width: 1px;
+        // border-color: #e8edf1;
+        color: #000033;
+        font-size: 13px;
+        font-weight: 500;
+        cursor: pointer;
+        margin-right: 2px;
+    }
+    .button2:hover {
+        color: #b0c4de;
+    }
 }
 
-.work_content1{
-    max-width :300px;
-    width: 100%;
-    max-height :160px;
-    height: 100%;
-    
-    border-style: solid ;
+.work_content1 {
+    border-style: solid;
     border-width: 1px;
     border-color: #000;
+    margin-right: 0px;
 
-    margin-right: 30px;
     position: relative;
 
+    @include sp {
+        max-width: 300px;
+        max-height: 160px;
+    }
 
-    .content1{
-    max-width :300px;
-    max-height :160px;
-    height: 100%;
-    width: 100%;
-
-        img{
-    max-width :300px;
-    max-height :160px;
-    height: 100%;
-    width: 100%;
+    .content1 {
+        img {
+            width: 100%;
+            height: 100%;
         }
     }
 
-
-    h3{
+    h3 {
         position: absolute;
         bottom: 0;
         padding: 2px 4px 2px 4px;
         font-size: 12px;
         background-color: #000;
         color: #fff;
-
     }
-
-
 }
 
-.work_content2{
-    max-width :300px;
-        width: 100%;
-
-    max-height :160px;
-    height: 100%;
-    margin-right: 30px;
+.work_content2 {
     position: relative;
-    border-style: solid ;
+    border-style: solid;
     border-width: 1px;
     border-color: #000;
+    margin-right: 0px;
 
+    @include sp {
+        max-width: 300px;
+        max-height: 160px;
+    }
 
-    h3{
+    h3 {
         position: absolute;
         bottom: 0;
         padding: 2px 4px 2px 4px;
         font-size: 12px;
-
         background-color: #000;
         color: #fff;
-
     }
 
-
-    .content2{
-    max-width :300px;
+    .content2 {
+        img {
             width: 100%;
-
-    max-height :160px;
-    height: 100%;
-        margin-right: 40px;
-
-        img{
-    max-width :300px;
-            width: 100%;
-    max-height :160px;
-    height: 100%;
-                }
+            height: 100%;
+        }
     }
-    
 }
 
-
-.work_underline{
+.work_underline {
     width: 100%;
     height: 0.5px;
     background-color: #000;
     margin-top: 30px;
-    margin-bottom: 40px
-}
-
-.work button{
-    width: 80px;
-    height: 30px;
-    margin-top: 18px;
-    margin-bottom:20px;
-    border-style:solid;
-    border-width: 1px;
-    border-color: #c6c6c6;
-    background-color: #e6e6e6;
-    font-size: 13px;
-    font-weight:100;
+    margin-bottom: 40px;
 }
 
 // contact
-#contact{
-    
+#contact {
     font-weight: 700;
 }
-#contact label{
-    font-size:13px;
-    color: #4D4D4D;
+#contact label {
+    font-size: 13px;
+    color: #4d4d4d;
 }
-.form{
+.form {
     margin-top: 20px;
-
 }
-.contact_item1{
+.contact_item1 {
     display: flex;
 }
-.contact_item2{
-    margin-top:14px;
+.contact_item2 {
+    margin-top: 14px;
 }
-.contact_item1_name{
+.contact_item1_name {
     width: 50%;
     margin-right: 20px;
 }
-.contact_item1_mail{
+.contact_item1_mail {
     width: 50%;
     margin-left: 0px;
-
 }
-#contact_name{
-         box-sizing:border-box;
+#contact_name {
+    box-sizing: border-box;
 
     width: 100%;
     height: 28px;
-    background-color: #F9F9F9;
-    border-color: #E0E0E0;
+    background-color: #f9f9f9;
+    border-color: #e0e0e0;
     border-style: solid;
-    border-width:1px;
-    padding-left: 1px;
-
+    border-width: 1px;
+    padding-left: 5px;
 }
-#contact_mail{
-         box-sizing:border-box;
+#contact_mail {
+    box-sizing: border-box;
 
     width: 100%;
     height: 28px;
-    background-color: #F9F9F9;
-    border-color: #E0E0E0;
+    background-color: #f9f9f9;
+    border-color: #e0e0e0;
     border-style: solid;
-    border-width:1px;
-    padding-left: 10px;
-
+    border-width: 1px;
+    padding-left: 5px;
 }
-#contact_message{
-     box-sizing:border-box;
+#contact_message {
+    box-sizing: border-box;
     width: 100%;
     height: 70px;
-    background-color: #F9F9F9;
-    border-color: #E0E0E0;
+    background-color: #f9f9f9;
+    border-color: #e0e0e0;
     border-style: solid;
-    border-width:1px;
-    padding-top: 8px;
-    padding-left: 10px;
-
+    border-width: 1px;
+    padding-top: 6px;
+    padding-left: 8px;
 }
-#err_textarea{
+#err_textarea {
     margin-top: 8px;
 }
-.err_text{
+.err_text {
     margin-top: 2px;
     font-size: 12px;
-    color: #F94B4B;
+    color: #f94b4b;
 }
-.confirm_btn{
-    color: #FFF;
+.confirm_btn {
+    color: #fff;
     background-color: #404549;
     cursor: pointer;
-    border-style:none;
+    border-style: none;
     padding: 10px 18px 10px 18px;
     margin-top: 12px;
     font-size: 13px;
     font-weight: 500;
-
 }
-#modal_section{
-
+#modal_section {
     position: fixed;
     top: 0;
     height: 100%;
@@ -515,71 +520,65 @@ button {
     z-index: 100;
     display: none;
 
+    .modal_form {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        z-index: 10000;
+        background-color: #fff;
 
-    .modal_form{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    -webkit-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    z-index: 10000;
-    background-color: #FFF;
+        .modal_title {
+            font-size: 16px;
+        }
 
-    .modal_title{
-        font-size: 16px;
-    }
-
-    .modal_main_section{
+        .modal_main_section {
             padding: 10px 20px 20px 20px;
+        }
 
+        .modal_item {
+            font-size: 14px;
+            margin-top: 10px;
+        }
 
+        .modal_item_subject {
+            font-weight: 900;
+        }
 
-    }
+        .close_button_section {
+            display: flex;
+            justify-content: flex-end;
+            margin-bottom: 10px;
+        }
 
-    .modal_item{
-        font-size: 14px;
-        margin-top: 10px;
-    }
+        .close_button {
+            cursor: pointer;
+            width: 12px;
+            height: 12px;
+            margin-top: 5px;
+            margin-right: 10px;
+        }
 
-    .modal_item_subject{
-        font-weight: 900;
-    }
+        .modal_button {
+            margin-top: 16px;
+            font-size: 13px;
+            color: #fff;
+            padding: 6px 8px 6px 8px;
+            border: none;
+            border-style: solid 1px;
+            background-color: #5a5d5e;
+            cursor: pointer;
+        }
 
-    .close_button_section{
-        display: flex;
-        justify-content: flex-end;
-        margin-bottom: 10px;
-    }
-
-    .close_button{
-        cursor: pointer;
-        width: 12px;
-        height: 12px;
-        margin-top: 5px;
-        margin-right: 10px;
-
-
-    }
-        
-    .modal_button{
-        margin-top: 16px;
-        font-size: 13px;
-        color: #fff;
-        padding: 6px 8px 6px 8px;
-        border: none;
-        border-style: solid 1px;
-        background-color:#5A5D5E;
-        cursor: pointer;
-    }
-
-    input{
-        display: none;
+        input {
+            display: none;
         }
     }
 }
 
-#contact_success{
+#contact_success {
     background-color: #404549;
     width: 100%;
     margin-top: 8px;
@@ -587,23 +586,20 @@ button {
     display: flex;
     align-items: center;
 
-    #success_box{
+    #success_box {
         padding-left: 20px;
     }
 
-    .main_message{
+    .main_message {
         font-size: 24px;
         font-weight: 100;
         margin-bottom: 8px;
         color: #f3f3f3;
-
     }
-    .sub_message{
+    .sub_message {
         font-size: 10px;
         margin-top: 2px;
         font-weight: 100;
         color: #f3f3f3;
-            
     }
 }
-
