--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -137,7 +137,7 @@ button {
   width: 20px;
   height: 1px;
   display: block;
-  background-color: #FC751A;
+  background-color: #fc751a;
   position: absolute;
   top: 10px;
   transition: ease 0.4s;
@@ -302,32 +302,76 @@ button {
 }
 
 .work {
-  display: flex;
+  display: block;
   margin-top: 70px;
+}
+@media screen and (min-width: 620px) {
+  .work {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
+.work_content {
+  margin-right: 0px;
+  margin-bottom: 20px;
+}
+@media screen and (min-width: 620px) {
+  .work_content {
+    max-width: 300px;
+    max-height: 160px;
+    width: 100%;
+    height: 100%;
+  }
+}
+.work_content .buttons {
+  display: flex;
+  justify-content: center;
+}
+.work_content .button1 {
+  height: 30px;
+  margin-top: 4px;
+  margin-bottom: 20px;
+  border-width: 1px;
+  color: #000033;
+  font-size: 13px;
+  cursor: pointer;
+  margin-right: 8px;
+  margin-left: 2px;
+}
+.work_content .button1:hover {
+  color: #b0c4de;
+}
+.work_content .button2 {
+  height: 30px;
+  margin-top: 4px;
+  margin-bottom: 20px;
+  color: #000033;
+  font-size: 13px;
+  font-weight: 500;
+  cursor: pointer;
+  margin-right: 2px;
+}
+.work_content .button2:hover {
+  color: #b0c4de;
 }
 
 .work_content1 {
-  max-width: 300px;
-  width: 100%;
-  max-height: 160px;
-  height: 100%;
   border-style: solid;
   border-width: 1px;
   border-color: #000;
-  margin-right: 30px;
+  margin-right: 0px;
   position: relative;
 }
-.work_content1 .content1 {
-  max-width: 300px;
-  max-height: 160px;
-  height: 100%;
-  width: 100%;
+@media screen and (min-width: 620px) {
+  .work_content1 {
+    max-width: 300px;
+    max-height: 160px;
+  }
 }
 .work_content1 .content1 img {
-  max-width: 300px;
-  max-height: 160px;
-  height: 100%;
   width: 100%;
+  height: 100%;
 }
 .work_content1 h3 {
   position: absolute;
@@ -339,15 +383,17 @@ button {
 }
 
 .work_content2 {
-  max-width: 300px;
-  width: 100%;
-  max-height: 160px;
-  height: 100%;
-  margin-right: 30px;
   position: relative;
   border-style: solid;
   border-width: 1px;
   border-color: #000;
+  margin-right: 0px;
+}
+@media screen and (min-width: 620px) {
+  .work_content2 {
+    max-width: 300px;
+    max-height: 160px;
+  }
 }
 .work_content2 h3 {
   position: absolute;
@@ -357,17 +403,8 @@ button {
   background-color: #000;
   color: #fff;
 }
-.work_content2 .content2 {
-  max-width: 300px;
-  width: 100%;
-  max-height: 160px;
-  height: 100%;
-  margin-right: 40px;
-}
 .work_content2 .content2 img {
-  max-width: 300px;
   width: 100%;
-  max-height: 160px;
   height: 100%;
 }
 
@@ -379,26 +416,13 @@ button {
   margin-bottom: 40px;
 }
 
-.work button {
-  width: 80px;
-  height: 30px;
-  margin-top: 18px;
-  margin-bottom: 20px;
-  border-style: solid;
-  border-width: 1px;
-  border-color: #c6c6c6;
-  background-color: #e6e6e6;
-  font-size: 13px;
-  font-weight: 100;
-}
-
 #contact {
   font-weight: 700;
 }
 
 #contact label {
   font-size: 13px;
-  color: #4D4D4D;
+  color: #4d4d4d;
 }
 
 .form {
@@ -427,34 +451,34 @@ button {
   box-sizing: border-box;
   width: 100%;
   height: 28px;
-  background-color: #F9F9F9;
-  border-color: #E0E0E0;
+  background-color: #f9f9f9;
+  border-color: #e0e0e0;
   border-style: solid;
   border-width: 1px;
-  padding-left: 1px;
+  padding-left: 5px;
 }
 
 #contact_mail {
   box-sizing: border-box;
   width: 100%;
   height: 28px;
-  background-color: #F9F9F9;
-  border-color: #E0E0E0;
+  background-color: #f9f9f9;
+  border-color: #e0e0e0;
   border-style: solid;
   border-width: 1px;
-  padding-left: 10px;
+  padding-left: 5px;
 }
 
 #contact_message {
   box-sizing: border-box;
   width: 100%;
   height: 70px;
-  background-color: #F9F9F9;
-  border-color: #E0E0E0;
+  background-color: #f9f9f9;
+  border-color: #e0e0e0;
   border-style: solid;
   border-width: 1px;
-  padding-top: 8px;
-  padding-left: 10px;
+  padding-top: 6px;
+  padding-left: 8px;
 }
 
 #err_textarea {
@@ -464,11 +488,11 @@ button {
 .err_text {
   margin-top: 2px;
   font-size: 12px;
-  color: #F94B4B;
+  color: #f94b4b;
 }
 
 .confirm_btn {
-  color: #FFF;
+  color: #fff;
   background-color: #404549;
   cursor: pointer;
   border-style: none;
@@ -495,7 +519,7 @@ button {
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   z-index: 10000;
-  background-color: #FFF;
+  background-color: #fff;
 }
 #modal_section .modal_form .modal_title {
   font-size: 16px;
@@ -529,7 +553,7 @@ button {
   padding: 6px 8px 6px 8px;
   border: none;
   border-style: solid 1px;
-  background-color: #5A5D5E;
+  background-color: #5a5d5e;
   cursor: pointer;
 }
 #modal_section .modal_form input {
