--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -33,6 +33,10 @@ li {
   list-style: none;
 }
 
+.flex {
+  display: flex;
+}
+
 button {
   background: none;
   border: none;
@@ -40,6 +44,14 @@ button {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
+}
+
+input[type=text] {
+  background-color: #f9f9f9;
+}
+
+input:-webkit-autofill {
+  box-shadow: 0 0 0 1000px #f9f9f9 inset;
 }
 
 .floating_menu {
@@ -229,6 +241,9 @@ button {
 
 .about {
   font-size: 12px;
+}
+.about a:visited {
+  color: #000;
 }
 
 .intro {
