--- a/public/css/dt.css
+++ b/public/css/dt.css
@@ -4,12 +4,43 @@
 }
 
 h1 {
-  margin-top: 20px;
+  margin-top: 30px;
   margin-bottom: 5px;
 }
 
+h2 {
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
+
+h3 {
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+h4 {
+  margin-top: 20px;
+  margin-bottom: 15px;
+}
+
+li {
+  line-height: 1.6;
+}
+
+a {
+  color: blue;
+  text-decoration: none;
+}
+
+a:visited {
+  color: blue;
+}
+
 .wrapper {
-  margin-left: 10px;
+  width: 980px;
+  margin-top: 0px;
+  margin-left: 30px;
+  margin-bottom: 50px;
 }
 
 .list_none {
@@ -22,5 +53,10 @@ h1 {
 }
 
 .movie {
+  margin-top: 14px;
   margin-bottom: 20px;
+}
+
+.flex {
+  display: flex;
 }
