--- a/resources/css/dt.scss
+++ b/resources/css/dt.scss
@@ -3,11 +3,37 @@
     padding: 0;
 }
 h1 {
-    margin-top: 20px;
+    margin-top: 30px;
     margin-bottom: 5px;
 }
+h2 {
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+h3{
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+h4{
+    margin-top: 20px;
+    margin-bottom: 15px;
+}
+li{
+    line-height: 1.6;
+}
+a{
+    color: blue;
+    text-decoration:none;
+}
+a:visited{
+    color: blue;
+}
+
 .wrapper {
-    margin-left: 10px;
+    width: 980px;
+    margin-top: 0px;
+    margin-left: 30px;
+    margin-bottom: 50px;
 }
 .list_none {
     list-style: none;
@@ -17,5 +43,9 @@ h1 {
     margin-bottom: 20px;
 }
 .movie {
+    margin-top: 14px;
     margin-bottom: 20px;
+}
+.flex{
+    display: flex;
 }
