--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -59,11 +59,13 @@ input:-webkit-autofill {
   width: 100%;
   position: fixed;
   background-color: #000;
-  color: #fff;
   z-index: 4;
   opacity: 0;
   visibility: hidden;
   transition: 1s;
+}
+.floating_menu a {
+  color: #fff;
 }
 .floating_menu a:hover {
   color: #606060;
