--- a/resources/css/custom.scss
+++ b/resources/css/custom.scss
@@ -75,10 +75,7 @@ input:-webkit-autofill {
     opacity: 0;
     visibility: hidden;
     transition: 1s;
-
-    a{
-       color: #fff;
-    }
+    
 
     a:hover {
         color: #606060;
@@ -91,6 +88,13 @@ input:-webkit-autofill {
         align-items: center;
     }
 }
+.floating_link{
+    li{ color:#fff;
+        }
+    li:hover{
+        color: #606060;
+    }
+}
 .menu_active {
     transition: 1s;
     opacity: 1;
@@ -100,7 +104,7 @@ input:-webkit-autofill {
 .main_list {
     font-size: 32px;
     font-weight: 600;
-    margin-top: 20px;
+    padding-bottom: 30px;
     line-height: 0.8;
     text-align: center;
 }
