--- a/resources/css/custom.scss
+++ b/resources/css/custom.scss
@@ -104,7 +104,8 @@ input:-webkit-autofill {
 .main_list {
     font-size: 32px;
     font-weight: 600;
-    padding-bottom: 30px;
+    margin-top: 22px;
+    margin-bottom: 22px;
     line-height: 0.8;
     text-align: center;
 }
